docs/3.0.x/install-rn.mdx
---
id: install-rn
title: Install in React Native project
---

import { TileLink } from "../../src/components";

#### Create a new React Native CLI project

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  To create a new react project run the following command:
</Text>

```bash isBashStyled=false
  npx react-native init AwesomeNativeBase
cd AwesomeNativeBase
```


<Box mt='3' />

#### Install dependencies

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  You can install the package and its peer dependencies using the package manager of your choice.
</Text>
<Box mt='3' />
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
 Open a Terminal in your project's folder and run :
</Text>

```bash
  yarn add native-base react-native-svg@12.1.1 styled-components styled-system react-native-safe-area-context@3.3.2
```

</Box>

<Box
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using npm
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Open a Terminal in your project's folder and run :
</Text>

```bash
   npm install native-base react-native-svg@12.1.1 styled-components styled-system react-native-safe-area-context@3.3.2
```

</Box>

#### Run pod install

```bash isBashStyled=false
  cd ios/
pod install
```
<Box mt='3' />

#### Run the Hello world example

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Put the below code in your App.js
</Text>

```jsx
import React from "react";
import { NativeBaseProvider, Box } from "native-base";

function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```



<Box>
  <Box mt="4" mb="8">
    <HStack pl="0" ml="0" space="4">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </HStack>
    <Box mt="4" pl="0" ml="0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </Box>
  </Box>
</Box>
