docs/3.2.x/install-rn.mdx
---
id: install-rn
title: Install in React Native project
---

import { TileLink } from "../../src/components";

<DocTabs
  defaultValue='new'
  values={[
  { label: 'New Project', value: 'new' },
  { label: 'Existing Project', value: 'existing' }
  ]}>

<DocTabItem value="new">
<Box mt='3' />

#### Create a new project using ReactNative CLI with NativeBase template


[Refer this link](https://github.com/react-native-community/cli#about) to get infomation about the React Native CLI.

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
You can use React Native today in your existing Android and iOS projects or you can create a whole new app from scratch.
 </Text>
<br/>
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>

<Text bold mb="2" fontSize="md" >
  Using npx
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800"}}
>
 Choose your preferred template and start your development swiftly.
Open a Terminal in your project's folder and run the following one of these command :
</Text>
<br />
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
  fontSize='sm'
>
  Plain Javascript
</Text>


```bash
  npx react-native init MyApp --template react-native-template-native-base
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing App.js now.
</Text>
<br />

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="bold"
  fontSize='sm'
>
  With Typescript
</Text>


```bash
 npx react-native init MyApp --template react-native-template-native-base-typescript
```

<Text fontSize="sm" lineHeight="sm">
  Yey! you are all set, start editing App.tsx now.
</Text>
</Box>


</DocTabItem>

<DocTabItem value="existing">
<Box mt='3' />

#### Create a new React Native CLI project

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
  fontWeight="medium"
>
  To create a new react project run the following command:
</Text>

```bash isBashStyled=false
npx react-native init AwesomeNativeBase
cd AwesomeNativeBase
```
<Box mt='3' />

#### Install dependencies

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  You can install the package and its peer dependencies using the package manager of your choice.
</Text>
<Box mt='3' />
<Box 
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using yarn
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
 Open a Terminal in your project's folder and run :
</Text>

```bash 
  yarn add native-base react-native-svg@12.1.1 react-native-safe-area-context@3.3.2
```

</Box>

<Box
 _dark={{ bg: "#171E2E" }}
_light={{ bg: "coolGray.50" }}
rounded='lg' 
py="3"
px="4"
pb='4'
rounded="md"
mb='8'
>
<Text bold mb="2" fontSize="md" >
  Using npm
</Text>
<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Open a Terminal in your project's folder and run :
</Text>

```bash
npm install native-base react-native-svg@12.1.1 react-native-safe-area-context@3.3.2
```

</Box>



#### Run pod install

```bash isBashStyled=false
cd ios/
pod install
```
<Box mt='3' />

#### Run the Hello world example

<Text
  _dark={{ color: "coolGray.300" }}
  _light={{ color: "coolGray.800" }}
>
  Put the below code in your App.js
</Text>

```jsx
import React from "react";
import { NativeBaseProvider, Box } from "native-base";

export default function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

</DocTabItem>

</DocTabs>



<Box>
  <Box mt="4" mb="8">
    <HStack pl="0" ml="0" space="4">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </HStack>
    <Box mt="4" pl="0" ml="0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </Box>
  </Box>
</Box>
